# valorant-cv

./: pyproject.toml
modules/: buckets.tf  main.tf  notebook.tf  roles.tf
util/: copy_files_from_list.py  extract_frames.py  split_dataset.py
yolov4/: obj.data
