[tool.poetry]
name = "valorant-cv"
version = "0.1.0"
description = ""
authors = ["mowemcfc <jcartermcfc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
opencv-contrib-python = "^4.5.5"

[tool.poetry.dev-dependencies]
label-studio = "^1.4"
pylint = "^2.12.2"
opencv-contrib-python = "^4.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
